update speedrun leaderboard

--- a/speedruns/njamod/index.html
+++ b/speedruns/njamod/index.html
@@ -13,9 +13,9 @@
     <meta property="og:title" content="Pizza Tower: Scoutdigo - NJAmod - Speedrun Leaderboard" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A mod for a mod for Pizza Tower" />
-    <meta property="og:url" content="westcraft15.github.io/speedruns/nja_mod" />
-    <meta property="og:image" content="https://westcraft15.github.io/speedruns/nja_mod/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://westcraft15.github.io/speedruns/nja_mod/assets/img/logo.png" />
+    <meta property="og:url" content="westcraft15.github.io/speedruns/njamod" />
+    <meta property="og:image" content="https://westcraft15.github.io/speedruns/njamod/assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://westcraft15.github.io/speedruns/njamod/assets/img/logo.png" />
     <meta property="og:image:alt" content="NJAmod logo" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
