--- a/speedruns/njamod_il/index.html
+++ b/speedruns/njamod_il/index.html
@@ -28,7 +28,7 @@
     <p>A mod for a mod for Pizza Tower</p>
 
     <h2>Categories</h2>
-    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/NJA+IS-John_Gutter_Any">NJAmod + Infinite Speed - John Gutter Any%</a></div>
+    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/NJA+IS-John_Gutter_Any">NJAmod + Infinite Speed - John Gutter Any%</a><a class="categoryLink" href="categories/NJA+IS-GOLF_Any">NJAmod + Infinite Speed - G.O.L.F. Any%</a><a class="categoryLink" href="categories/NJA+IS-Refrigerator-Refrigerador-Freezerator_Any">NJAmod + Infinite Speed - Refrigerator-Refrigerador-Freezerator Any%</a></div>
 </body>
 
 </html>
