--- a/speedruns/njamod_il/runs/3/index.html
+++ b/speedruns/njamod_il/runs/3/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - G.O.L.F. Any% - TheNja09</title>
+    <title>Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - GOLF Any% - TheNja09</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - G.O.L.F. Any% - TheNja09" />
+    <meta property="og:title" content="Pizza Tower: Scoutdigo - NJAmod (IL) - NJAmod + Infinite Speed - GOLF Any% - TheNja09" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="NOT A TAS!!!! But still can be better." />
     <meta property="og:url" content="westcraft15.github.io/speedruns/njamod_il/3/index.html" />
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h1><a href="../../">Pizza Tower: Scoutdigo - NJAmod (IL)</a> - <a href="../../categories/NJA+IS-GOLF_Any">NJAmod + Infinite Speed - G.O.L.F. Any%</a></h1>
+    <h1><a href="../../">Pizza Tower: Scoutdigo - NJAmod (IL)</a> - <a href="../../categories/NJA+IS-GOLF_Any">NJAmod + Infinite Speed - GOLF Any%</a></h1>
     <h2 class="reduceTopMargin">TheNja09's run</h2>
     <div class="runContainer">
         <p>0:01:32 (rank #1)</p>
