--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -221,8 +221,8 @@
 				<li>Time is of the essence, please.</li>
 				<li>We have been expecting you.<br>Please, do come in.<br>He wants to speak to you.</li>
 			</ol>
-			<h2 id="heaven">the angel</h2>
-			<p>we do not know who he is</p>
+			<h2 id="heaven">pete</h2>
+			<p>we know who he is</p>
 			<p>we do not know what he wants</p>
 			<p>but he is here</p>
 			<ul style="font-size: 16px;">
