--- a/keyhunt/guide-2.0.html
+++ b/keyhunt/guide-2.0.html
@@ -10,7 +10,7 @@
 	<meta content="Key Hunt Guide (v2.0)" property="og:title" />
 	<meta content="why are you still here?" property="og:description" />
 	<meta content="https://westcraft15.github.io/keyhunt/guide2.0" property="og:url" />
-	<meta content="https://westcraft15.github.io/keyhunt/assets/Bluouy.png" property="og:image" />
+	<meta content="https://westcraft15.github.io/keyhunt/assets/Lenny.png" property="og:image" />
 	<meta content="#33ADFF" data-react-helmet="true" name="theme-color" />
 
 	<body>
