--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 		<meta charset="utf-8">
         <title>WestCraft15 (HOME)</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+		<link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>WestCraft15.github.io</h1>
-        <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
+        <p style="text-align: center;">(under construction if you couldnt tell)</p>
+        <div style="width: 80%; margin: auto; border: 6px solid darkblue; border-radius: 24px; padding: 0px 36px; background-color: aqua;">
+            <img hidden src="assets/Luigi.png" alt="Luigi" width="128px" height="128px" style="float:right; padding-top: 16px;">
+            <h2 hidden>About</h2>
+            <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
+        </div>
     </body>
 </html>
