--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -78,7 +78,7 @@
 			<p>In the Floor 3 Secret room, grabbing and throwing the washing machine in the water 3 times will reveal a Key.</p>
 			<h2 id="9">Key 9</h2>
 			<p>First, talk to GPB. Then, visit the Granny Pizza in the Floor 4 Secret room and press up to talk to her as a normal NPC. After this, talk to the fourth Granny Pizza in the Arena Tutorial. Depending on what she says, there are 5 locations for the key to spawn.</p>
-			<h3>Locations: (TODO)</h3>
+			<h3>Locations: (Video Coming Soon)</h3>
 			<ol>
 				<li>“Something hidden in the wall... left of a janitor.”:<br>Floor 1</li>
 				<li>“Something hidden underneath an overhang in a desert...”:<br>Floor 2</li>
