--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div style="width: 80%; margin: auto; border: 6px solid darkblue; border-radius: 24px; padding: 0px 36px; background-color: aqua;">
             <img hidden src="assets/Luigi.png" alt="Luigi" width="128px" height="128px" style="float:right; padding-top: 16px;">
             <h2 hidden>About</h2>
+            <p hidden>Hi, I'm WestCraft15! You may know me as The Key Hunt Guy or the co-owner of Scoutdigo Community Edition. I've done things before, here's some of them: (TODO: LIST)</p>
             <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
         </div>
     </body>
