--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <h1>WestCraft15.github.io</h1>
         <p style="text-align: center;">(under construction if you couldnt tell)</p>
         <div style="width: 80%; margin: auto; border: 6px solid darkblue; border-radius: 24px; padding: 0px 36px; background-color: aqua;">
-            <img hidden src="assets/Luigi.png" alt="Luigi" width="128px" height="128px" style="float:right; padding-top: 16px;">
-            <h2 hidden>About</h2>
-            <p hidden>Hi, I'm WestCraft15! You may know me as The Key Hunt Guy or the co-owner of Scoutdigo Community Edition. I've done things before, here's some of them: (TODO: LIST)</p>
-            <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
+            <img src="assets/Luigi.png" alt="Luigi" width="128px" height="128px" style="float:right; padding-top: 16px;">
+            <h2>About</h2>
+            <p>Hi, I'm WestCraft15! You may know me as The Key Hunt Guy or the co-owner of Scoutdigo Community Edition.</p>
+            <p>Here's some of the projects I've worked on previously:</p>
+            <ul>
+                <li><a href="keyhunt/keyhunt">The Scoutdigo Key Hunt Guide</a></li>
+                <li hidden>project 2</li>
+                <li hidden>project 3</li>
+            </ul>
+            <p hidden>Welcome. You're probably looking for the <a href="keyhunt/keyhunt">Scoutdigo Key Guide</a>.</p>
         </div>
     </body>
 </html>
