added those videos i promised

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -78,7 +78,7 @@
 			<p>In the Floor 3 Secret room, grabbing and throwing the washing machine in the water 3 times will reveal a Key.</p>
 			<h2 id="9">Key 9</h2>
 			<p>First, talk to GPB. Then, visit the Granny Pizza in the Floor 4 Secret room and press up to talk to her as a normal NPC. After this, talk to the fourth Granny Pizza in the Arena Tutorial. Depending on what she says, there are 5 locations for the key to spawn.</p>
-			<h3>Locations: (Video Coming Soon)</h3>
+			<h3>Locations:</h3>
 			<ol>
 				<li>“Something hidden in the wall... left of a janitor.”:<br>Floor 1</li>
 				<li>“Something hidden underneath an overhang in a desert...”:<br>Floor 2</li>
@@ -86,6 +86,7 @@
 				<li>“Something hidden above a pipe...”:<br>Floor 4</li>
 				<li>“Something hidden above a cardboard cutout...”:<br>Floor 5</li>
 			</ol>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bnQCacpNl94" title="Key 9 Locations" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="10">Key 10</h2>
 			<p>First, talk to GPB. Then, talk to Pepperman in the Floor 1 Secret room. After this, visit the Floor 5 Secret room and Super Jump in front of each of the 3 paintings, destroying them. After which, the Key is spawned in the center of the room.</p>
 			<h2 id="11">Key 11</h2>
@@ -144,13 +145,12 @@
 			<h3>Common Issues:</h3>
 			<ol><li>If you can’t access the room, talk to GPB.</li></ol>
 			<h2 id="32">Key 32</h2>
-			<p class="important">THIS KEY IS DIFFERENT IN v1.2.3CE.</p>
+			<p class="important">THIS KEY IS DIFFERENT IN v1.2.3 CE AND ONWARDS.</p>
 			<p>In Wasteyard, the 3rd room (“The Pit”) has a new secret in the pillar to the right of the two Ranchers. This brings you to a maze with 12 (or 32 in 1.2.3CE) places for the key to spawn, chosen at random. Watch the video for a path to check them all.</p>
-			<h3>v1.2 Vanilla:</h3>
+			<h3>v1.2:</h3>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I5e16AaYu7c" title="Key 32 (Vanilla)" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-			<h3>v1.2.3CE:</h3>
-			<p>Coming Soon...</p>
-			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YFTX2mmBokk" title="Key 32 (CE)" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
+			<h3>v1.2.3 CE and up:</h3>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TUBYxPq0sxI" title="Key 32 (CE)" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="33">Key 33</h2>
 			<p>In Crust Cove, there is a pit to the right of Pillar John with a door in a secret in the right wall. Switch your Grab Type to Pummel to cross the water without activating Pizza Time. Complete the challenge to obtain the Key. Switching to Vigilante may help, as his dynamite can kill the Rats and prevent a softlock.</p>
 			<h2 id="34">Key 34</h2>
